# group-py

./: .gitignore  README.md  groupme_rework_plan.md  pyproject.toml  setup.py
examples/: .env.example  django_bot.py  flask_bot.py  multi_bot.py  send_only_bot.py
group-py/api/: api.py  bots.py
group_py/: __init__.py  bot.py  callback_handler.py  client.py  exceptions.py  models.py  sender.py  storage.py
group_py/api/: api.py  bots.py  groups.py  helpers.py  messages.py
group_py/router/: __init__.py  context.py  groupme_message.py  handlers.py  help.py  router.py
groupme_bot/: __init__.py  bot.py  client.py  models.py  sender.py
tests/: conftest.py  test_bot.py  test_bot_integration.py  test_client.py  test_models.py  test_router.py  test_sender.py  test_storage.py  test_util.py
